# python-monorepo-template

./: README.md  dev.py  pyproject.toml
