[project]
name = "python-monorepo-template"
version = "0.0.0"
description = "Python Monorepo template - Project structure optimized for AI Agents"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "deptry==0.24.0",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.0",
]
