[project]
name = "python-monorepo-template"
version = "0.0.0"
description = "Python Monorepo template - Project structure optimized for AI Agents"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "alembic~=1.18.3",
    "deptry~=0.24.0",
    "greenlet>=3.3.1",
    "pyright~=1.1.408",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "ruff~=0.15.0",
]
